jobs/rubby_dritdetect-slam-3566/builds/292/log
Started by user [8mha:////4HOQCKO8Bs/HYMEW+FBIw9/cZVzcK/iVQ2ceUdw+95QuAAAAnB+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzmEgYB/dLi1CL95NLMytK8itLEPADJvgzLxQAAAA==[0m崔云轩
Rebuilds build #[8mha:////4IhH8/vu6llb66AMc3TlO39HJ4mQeGiwfworlA6ANwyEAAAAtx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzmEgZd/bLM1HL94pzEXP2s/CT9otKkpMr4lKLMkpTUktTkEl2QjK6xqZmZvpGlIQBdiQcO4gAAAA==[0m291
Running as SYSTEM
Building remotely on [8mha:////4JiinonVqRVUq+0157MFNdoHlSrLzLyDeg8j8rfRwRzcAAAAmx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzWEgZ+/eT83ILSktQi/WRjUzMzABiYJ1zEAAAA[0mc3566 (car8) in workspace /root/workspace/workspace/rubby_dritdetect-slam-3566
[WS-CLEANUP] Clean-up disabled, skipping workspace deletion.
[rubby_dritdetect-slam-3566] $ /bin/sh -xe /tmp/jenkins3079566263946002355.sh
+ bash -ex /root/myscript/build/build.sh
+++ dirname /root/myscript/build/build.sh
++ cd /root/myscript/build
++ pwd
+ project_path=/root/myscript/build
+ . /root/myscript/build/../sh/cmdb
++ set -x
++ export MYSQL_PWD=123
++ MYSQL_PWD=123
++ export -f cmdb_mysql
+ . /root/myscript/build/../sh/version-update.sh
++ . /root/.bashrc
+++ '[' -z '' ']'
+++ return
+ set -ex
+ export -f public_project_update
+ export -f project_build
+ init_project_env
++ date +%Y%m%d
+ DT=20240620
+ UserName=jenkins
+ API_TOKEN=11b65309c9835de9579d9c9038853d9eb7
+ GIT_PRIVATE_TOKEN=emEDrsaJVjxKK5gSWrf-
+ GIT_HOST=192.168.50.191
++ echo abby/integration/dirtdetect
++ awk -F/ '{print $1"%2F"$2}'
+ CONVERT_TARGET_PROJECT=abby%2Fintegration
++ curl -XGET -H 'Content-Type: application/json' --header 'PRIVATE-TOKEN: emEDrsaJVjxKK5gSWrf-' http://192.168.50.191:85/api/v4/projects/abby%2Fintegration
++ python -c 'import sys, json; print(json.load(sys.stdin)["id"])'
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0100    35  100    35    0     0    593      0 --:--:-- --:--:-- --:--:--   593
Traceback (most recent call last):
  File "<string>", line 1, in <module>
KeyError: 'id'
+ SUB_PROJECT_ID=
+ true
+ '[' -z ']'
+ SOURCE_DIR=/root/workspace/workspace/rubby_dritdetect-slam-3566/rubby_dirtdetect_source
+ TARGET_DIR=/root/workspace/workspace/rubby_dritdetect-slam-3566/dirtdetect
+ prepare_env
++ uname -m
+ system_platform=aarch64
+ :
++ cat /proc/cpuinfo
++ grep processor
++ sort
++ uniq
++ wc -l
+ mt=-j4
+ export COMMIT_ID_FILE=/root/workspace/workspace/rubby_dritdetect-slam-3566/_last_build_id
+ COMMIT_ID_FILE=/root/workspace/workspace/rubby_dritdetect-slam-3566/_last_build_id
+ export COMMIT_MSG_FILE=/root/workspace/workspace/rubby_dritdetect-slam-3566/_commit-msg
+ COMMIT_MSG_FILE=/root/workspace/workspace/rubby_dritdetect-slam-3566/_commit-msg
+ export COMMIT_MSG_FILE_TMP=/root/workspace/workspace/rubby_dritdetect-slam-3566/_commit-msg.tmp
+ COMMIT_MSG_FILE_TMP=/root/workspace/workspace/rubby_dritdetect-slam-3566/_commit-msg.tmp
+ rm -f /root/workspace/workspace/rubby_dritdetect-slam-3566/_last_build_id
+ rm -f /root/workspace/workspace/rubby_dritdetect-slam-3566/_commit-msg
+ rm -f /root/workspace/workspace/rubby_dritdetect-slam-3566/_commit-msg.tmp
+ rm -f /root/workspace/workspace/rubby_dritdetect-slam-3566/result.log
+ rm -f /root/workspace/workspace/rubby_dritdetect-slam-3566/no_code_change.log
+ sign_env
+ CONFIG_DIR_SET=/root/system
+ CONFIG_BRANCH=mind_os
+ CLONE_DEPTH=--depth=1
+ CONFIG_DIR=/root/system/i18rconfig
+ CONFIG_REMOTE='git clone ssh://git@192.168.50.191:222/AroundI18RProject/i18rconfig /root/system/i18rconfig -b mind_os --depth=1'
+ [[ aarch64 =~ x86_64 ]]
+ ENCRYPTION_TOOL=/root/system/i18rconfig/encrypt
+ CLONE_DEPTH=--depth=1
+ PUBLICBASETYPES_DIR=/root/system/I18RPublicBaseTypes
+ cmdb_mysql 'insert into prebuild(job_name,source_project,source_branch,target_project,target_branch,time,build_url,node_name,build_user) values ('\''rubby_dritdetect-slam-3566'\'','\''cuiyunxuan/rubby_dirtdetect_source'\'','\''SP'\'','\''abby/integration/dirtdetect'\'','\''caffer_test'\'',now(),'\''http://192.168.50.191:8088/job/rubby_dritdetect-slam-3566/292/'\'','\''c3566'\'','\''cuiyunxuan'\'')'
+ set +x
+ DOCKER_CONTAINER_I18=build-x64-18.04
+ DOCKER_CONTAINER_RUBBY=c405
+ DOCKER_CONTAINER_RUBBY_INSIDE=c3566
+ DOCKER_CONTAINER_JAVA=node
+ JENKINS_JOB_A=mind
+ JENKINS_JOB_B=rbn
+ JENKINS_JOB_C=mark-check-tools
+ JENKINS_JOB_D=java
+ JENKINS_JOB_E=clean_recorder
+ JENKINS_JOB_F=i18r
+ JENKINS_JOB_G=nodejs
+ JENKINS_JOB_H=_ui
+ JENKINS_JOB_L=i12r
+ [[ rubby_dritdetect-slam-3566 =~ mind ]]
+ '[' false = false ']'
+ source_project_update
+ '[' -d /root/workspace/workspace/rubby_dritdetect-slam-3566/rubby_dirtdetect_source ']'
+ pushd /root/workspace/workspace/rubby_dritdetect-slam-3566/rubby_dirtdetect_source
~/workspace/workspace/rubby_dritdetect-slam-3566/rubby_dirtdetect_source ~/workspace/workspace/rubby_dritdetect-slam-3566
+ git checkout ./
+ git pull --rebase
From ssh://192.168.50.191:222/cuiyunxuan/rubby_dirtdetect_source
   d992156..6dd392e  SP         -> origin/SP
Updating d992156..6dd392e
Fast-forward
 Examples/dirt_detect_plugin.cc              | 2 --
 abby_msg/msg/semantic_map/OccupancyMapMsg.h | 6 +++---
 2 files changed, 3 insertions(+), 5 deletions(-)
Current branch SP is up to date.
+ popd
~/workspace/workspace/rubby_dritdetect-slam-3566
+ target_project_update
+ rm -rf /root/workspace/workspace/rubby_dritdetect-slam-3566/dirtdetect
+ target_project_fetch
+ git clone ssh://git@192.168.50.191:222/abby/integration/dirtdetect -b caffer_test --depth=1
Cloning into 'dirtdetect'...
+ insert_db
+ pushd /root/workspace/workspace/rubby_dritdetect-slam-3566/rubby_dirtdetect_source
~/workspace/workspace/rubby_dritdetect-slam-3566/rubby_dirtdetect_source ~/workspace/workspace/rubby_dritdetect-slam-3566
++ cmdb_mysql 'SELECT first_commit_id FROM prebuild where source_project='\''cuiyunxuan/rubby_dirtdetect_source'\'' and source_branch='\''SP'\'' and target_project='\''abby/integration/dirtdetect'\'' and target_branch='\''caffer_test'\'' and status='\''0'\'' and job_name='\''rubby_dritdetect-slam-3566'\'' order by id desc limit 1;'
++ set +x
+ version='first_commit_id
d992156'
++ echo first_commit_id d992156
++ awk -F ' ' '{print $2}'
+ version=d992156
++ git log -1 --pretty=format:%h
+ first_commit_id_now=6dd392e
+ cmdb_mysql 'update prebuild set first_commit_id='\''6dd392e'\'' where build_url='\''http://192.168.50.191:8088/job/rubby_dritdetect-slam-3566/292/'\'';'
+ set +x
+ popd
~/workspace/workspace/rubby_dritdetect-slam-3566
+ [[ aarch64 =~ x86_64 ]]
+ [[ rubby_dritdetect-slam-3566 =~ i18r ]]
+ project_build
+ pushd /root/workspace/workspace/rubby_dritdetect-slam-3566/rubby_dirtdetect_source
~/workspace/workspace/rubby_dritdetect-slam-3566/rubby_dirtdetect_source ~/workspace/workspace/rubby_dritdetect-slam-3566
+ project_init_remote
++ find -type f -name sync_submodules.sh
+ sf=
+ '[' -z ']'
+ git submodule update --init --recursive
+ git submodule update --remote
+ sed -i 's/make -j[0-9].*/make -j4/g' build.sh
+ '[' -z ']'
+ '[' x6dd392e == xd992156 ']'
+ bash -ex build.sh
+ echo 'rubby_dirtdetect_interface ...'
rubby_dirtdetect_interface ...
+ rm -rf lib/libdirt_detect.so lib/libdirt_detect.so.2.0.6 lib/libdirt_detect_plugin.so
+ mkdir build
mkdir: cannot create directory ‘build’: File exists
+ true
+ cd build
+ cmake .. -DCMAKE_BUILD_TYPE=Release
Build type: Release
Detected armv8 -D__ARM_NEON__ -DENABLE_NEON -Ofast -std=c++17 -Wno-unused-result
-- Using flag -std=c++17.
-- /root/workspace/workspace/rubby_dritdetect-slam-3566/rubby_dirtdetect_source/opencv-3.4.3/build/
-- /root/workspace/workspace/rubby_dritdetect-slam-3566/rubby_dirtdetect_source/opencvshare/include/opencv2/
OPENCV VERSION: 3.4.3
-- Configuring done
-- Generating done
-- Build files have been written to: /root/workspace/workspace/rubby_dritdetect-slam-3566/rubby_dirtdetect_source/build
+ make -j4
Consolidate compiler generated dependencies of target annotation
[ 18%] Built target annotation
Consolidate compiler generated dependencies of target dirt_detect
[ 25%] Linking CXX shared library ../lib/libdirt_detect.so
[ 50%] Built target dirt_detect
Consolidate compiler generated dependencies of target test_dirt_detect
[ 56%] Linking CXX executable test_dirt_detect
Consolidate compiler generated dependencies of target dirt_detect_plugin
[ 62%] Building CXX object CMakeFiles/dirt_detect_plugin.dir/Examples/dirt_detect_plugin.cc.o
[ 68%] Built target test_dirt_detect
/root/workspace/workspace/rubby_dritdetect-slam-3566/rubby_dirtdetect_source/Examples/dirt_detect_plugin.cc:36:17: error: ‘depth_msgs’ is not a namespace-name
 using namespace depth_msgs;
                 ^~~~~~~~~~
/root/workspace/workspace/rubby_dritdetect-slam-3566/rubby_dirtdetect_source/Examples/dirt_detect_plugin.cc:36:27: error: expected namespace-name before ‘;’ token
 using namespace depth_msgs;
                           ^
CMakeFiles/dirt_detect_plugin.dir/build.make:75: recipe for target 'CMakeFiles/dirt_detect_plugin.dir/Examples/dirt_detect_plugin.cc.o' failed
make[2]: *** [CMakeFiles/dirt_detect_plugin.dir/Examples/dirt_detect_plugin.cc.o] Error 1
CMakeFiles/Makefile2:114: recipe for target 'CMakeFiles/dirt_detect_plugin.dir/all' failed
make[1]: *** [CMakeFiles/dirt_detect_plugin.dir/all] Error 2
Makefile:90: recipe for target 'all' failed
make: *** [all] Error 2
Build step 'Execute shell' marked build as failure
Finished: FAILURE
